skills, interests, and schools form

--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="selectedPageIndex < 8" class="profile-completion">
+<div *ngIf="selectedPageIndex < 7" class="profile-completion">
 	<div class="container">
 		<ng-container *ngFor="let page_title of page_titles; let i = index">
 			<action-button *ngIf="page_title" class="link-btn desktop" type="text" title="{{page_title}}" (click)="goToPage(i)" [done]="selectedPageIndex > i" [disabled]="selectedPageIndex < i"></action-button>
@@ -6,7 +6,7 @@
 		<mat-icon (click)="toggleTabMenuOpen()">{{isTabMenuOpen ? 'close' : 'menu'}}</mat-icon>
 		<span class="progress-label tablet">{{page_titles[selectedPageIndex]}}</span>
 		<span class="progress-label"
-			[class.done]="selectedPageIndex===8">{{progressWidth[selectedPageIndex].label}}%</span>
+			[class.done]="selectedPageIndex===7">{{progressWidth[selectedPageIndex].label}}%</span>
 		<div class="progress-bar" [style.width.%]="progressWidth[selectedPageIndex].width"></div>
 		<div class="container__header tablet" [class.open]="isTabMenuOpen">
 			<ng-container *ngFor="let page_title of page_titles; let i = index">
@@ -168,7 +168,7 @@
   </div>
 </div>
   
-  <!-- Company Information end -->
+  <!-- Position Information end -->
 
   <!-- Preferred Education Start -->
   <div *ngIf="selectedPageIndex===2" class="container profile-skills">
@@ -251,3 +251,124 @@
     </div>
   </div>
   <!-- Perferred Education End -->
+
+  <!-- Preferred Work Experience Start -->
+  <!-- Preferred Work Experience End -->
+
+  <!-- Skills Start -->
+  <div *ngIf="selectedPageIndex===4" class="container profile-skills">
+    <div class="container__full">
+      <div class="profile-form" [formGroup]="skillsForm">
+        <h3 class="profile-form__title">
+          SKILLS
+        </h3>
+        <div class="profile-form__field search">
+          <h3>Minimum Skills <span *ngIf="minimum_skills &&  minimum_skills.length > 0" class="count">{{minimum_skills.length}}</span></h3>
+          <!-- <img src="assets/icons/ic_question.svg" (click)="openSkillDescriptionDialog()"> -->
+          <mat-form-field appearance="standard" class="search">
+            <mat-icon matSuffix>search</mat-icon>
+            <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteMinimumSkills" formControlName="search_minimum_skill">
+            <mat-autocomplete #autocompleteMinimumSkills="matAutocomplete">
+              <mat-option *ngFor="let autocomplete_skill of autocomplete_minimum_skills" [value]="autocomplete_skill.skill" (onSelectionChange)="onSelectMinimumSkill(autocomplete_skill)">
+                <span>{{autocomplete_skill.skill}}</span>
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+          <div *ngIf="temp_minimum_skill" class="skills">
+            <simple-tag type="gray" title="{{temp_minimum_skill.skillItem.skill}}" ellipseTag="true" isControl="true" value="{{temp_minimum_skill.skillItem.skill_level}}" (levelChanged)="onLevelChanged($event, temp_minimum_skill.index, true)" (removeClick)="onRemoveMinimumSkill(temp_skill.skillItem, temp_skill.index)"></simple-tag>
+            <mat-icon (click)="editSkillDone(true)">cancel</mat-icon>
+          </div>
+          <div *ngIf="!temp_minimum_skill && minimum_skills && minimum_skills.length > 0" class="skills">
+            <simple-tag *ngFor="let minimum_skill of minimum_skills; let i = index" type="gray" title="{{minimum_skill.skill}}" ellipseTag="true" value="{{minimum_skill.skill_level}}" isControl="true" (levelChanged)="onLevelChanged($event, i, true)" (removeClick)="onRemoveMinimumSkill(minimum_skill, i)"></simple-tag>
+          </div>
+        </div>
+        <div class="profile-form__field search">
+          <h3>Preferred Skills <span *ngIf="preferred_skills &&  preferred_skills.length > 0" class="count">{{preferred_skills.length}}</span></h3>
+          <!-- <img src="assets/icons/ic_question.svg" (click)="openSkillDescriptionDialog()"> -->
+          <mat-form-field appearance="standard" class="search">
+            <mat-icon matSuffix>search</mat-icon>
+            <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompletePreferredSkills" formControlName="search_preferred_skill">
+            <mat-autocomplete #autocompletePreferredSkills="matAutocomplete">
+              <mat-option *ngFor="let autocomplete_skill of autocomplete_preferred_skills" [value]="autocomplete_skill.skill" (onSelectionChange)="onSelectPreferredSkill(autocomplete_skill)">
+                <span>{{autocomplete_skill.skill}}</span>
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+          <div *ngIf="temp_preferred_skill" class="skills">
+            <simple-tag type="gray" title="{{temp_preferred_skill.skillItem.skill}}" ellipseTag="true" isControl="true" value="{{temp_preferred_skill.skillItem.skill_level}}" (levelChanged)="onLevelChanged($event, temp_preferred_skill.index, false)" (removeClick)="onRemovePreferredSkill(temp_skill.skillItem, temp_skill.index)"></simple-tag>
+            <mat-icon (click)="editSkillDone(false)">cancel</mat-icon>
+          </div>
+          <div *ngIf="!temp_preferred_skill && preferred_skills && preferred_skills.length > 0" class="skills">
+            <simple-tag *ngFor="let preferred_skill of preferred_skills; let i = index" type="gray" title="{{preferred_skill.skill}}" ellipseTag="true" value="{{preferred_skill.skill_level}}" isControl="true" (levelChanged)="onLevelChanged($event, i, false)" (removeClick)="onRemovePreferredSkill(preferred_skill, i)"></simple-tag>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container__full">
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
+    </div>
+  </div>
+  <!-- Skills End -->
+
+  <!-- Interests Start -->
+  <div *ngIf="selectedPageIndex===5" class="container profile-skills">
+    <div class="container__full">
+      <div class="profile-form" [formGroup]="interestsForm">
+        <h3 class="profile-form__title">
+          INTERESTS
+        </h3>
+        <div class="profile-form__field search">
+          <h3>Preferred Interests <span *ngIf="preferred_interests && preferred_interests.length > 0" class="count">{{preferred_interests.length}}</span></h3>
+          <mat-form-field appearance="standard" class="search">
+            <mat-icon matSuffix>search</mat-icon>
+            <input matInput placeholder="Search Interests" type="text" [matAutocomplete]="autocompleteInterests" formControlName="search_preferred_interest">
+            <mat-autocomplete #autocompleteInterests="matAutocomplete">
+              <mat-option *ngFor="let autocomplete_interest of autocomplete_preferred_interests" [value]="autocomplete_interest.interest" (onSelectionChange)="onSelectPreferredInterest(autocomplete_interest)">
+                <span>{{autocomplete_interest.interest}}</span>
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+          <div *ngIf="preferred_interests && preferred_interests.length > 0" class="skills">
+            <simple-tag *ngFor="let interestData of preferred_interests; let i = index" type="gray" removeTag="true" title="{{interestData.interest}}" (click)="onRemovePreferredInterest(interestData, i)"></simple-tag>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container__full">
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
+    </div>
+  </div>
+  <!-- Interests End -->
+
+  <!-- Preferred Schools Start -->
+  <div *ngIf="selectedPageIndex===6" class="container profile-skills">
+    <div class="container__full">
+      <div class="profile-form" [formGroup]="schoolRestrictionsForm">
+        <h3 class="profile-form__title">
+          School Restrictions
+        </h3>
+        <div class="profile-form__field search">
+          <h3>Applicants should be currently enrolled or alumni of the following schools.</h3>
+          <mat-form-field appearance="standard" class="search">
+            <mat-icon matSuffix>search</mat-icon>
+            <input matInput placeholder="Search school or university" type="text" [matAutocomplete]="autocompleteSchools" formControlName="search_preferred_school">
+            <mat-autocomplete #autocompleteSchools="matAutocomplete">
+              <mat-option *ngFor="let autocomplete_preferred_school of autocomplete_preferred_schools" [value]="autocomplete_preferred_school.school_name" (onSelectionChange)="onSelectPreferredSchool(autocomplete_preferred_school)">
+                <span>{{autocomplete_preferred_school.school_name}}</span>
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+          <div *ngIf="preferred_schools && preferred_schools.length > 0" class="skills">
+            <simple-tag *ngFor="let preferred_school of preferred_schools; let i = index" type="gray" removeTag="true" title="{{preferred_school.school_name}}" (click)="onRemovePreferredSchool(preferred_school, i)"></simple-tag>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container__full">
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()"></action-button>
+    </div>
+  </div>
+  <!-- Preferred Schools End -->
+
+  <!-- Postion Preview Start -->
+  <!-- Position Preview End -->
